vlib/v/checker/tests/mod_op_wrong_left_type_err_b.out
vlib/v/checker/tests/mod_op_wrong_left_type_err_b.vv:2:10: error: mismatched types `[]int` and `any_int`
    1 | fn main() {
    2 |     println([1,2,3] % 1)
      |             ~~~~~~~
    3 | }
